kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dxdprojects-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: dxdprojects-app
status:
  loadBalancer: { }
